# android-device-manager

./: CLAUDE.md  README.md
.github/: renovate.json
.github/workflows/: build.yml  ci.yml
docs/: README.md  architecture.md  deployment.md  development.md  proxy.md  usage.md
proxy/: Cargo.toml  Dockerfile  docker-entrypoint.sh
proxy/src/: bookmarks.rs  main.rs
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.css  App.tsx  main.tsx
web/src/components/: AppManager.tsx  ConnectionManager.tsx  DeviceInfo.tsx  DeviceSwitcher.tsx  FileBrowser.tsx  LogcatViewer.tsx  ScreenMirror.tsx  ShellTerminal.tsx
web/src/context/: DeviceContext.tsx  ProxyContext.tsx
web/src/lib/: adb-manager.ts  adb-server-transport.ts  app-manager.ts  bookmarks.ts  device-info.ts  file-browser.ts  logcat.ts  proxy-url.ts  scrcpy-client.ts  usb-transport.ts  ws-stream.ts  ws-transport.ts
